src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    LOWER_THAN_ELSE

Grammar

Rule 0     S' -> starter
Rule 1     starter -> starter builder
Rule 2     starter -> builder
Rule 3     builder -> function
Rule 4     builder -> declaration
Rule 5     function -> type identifier seen_identifier LP argument_list seen_argument_list RP compound_stmt
Rule 6     seen_identifier -> <empty>
Rule 7     seen_argument_list -> <empty>
Rule 8     type -> data_type pointer
Rule 9     type -> data_type
Rule 10    data_type -> sign_specifier type_specifier
Rule 11    data_type -> type_specifier
Rule 12    pointer -> MUL pointer
Rule 13    pointer -> MUL
Rule 14    sign_specifier -> SIGNED
Rule 15    sign_specifier -> UNSIGNED
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> SHORT INT
Rule 18    type_specifier -> SHORT
Rule 19    type_specifier -> LONG
Rule 20    type_specifier -> LONG_LONG
Rule 21    type_specifier -> LONG INT
Rule 22    type_specifier -> LONG_LONG INT
Rule 23    type_specifier -> CHAR
Rule 24    type_specifier -> FLOAT
Rule 25    type_specifier -> VOID
Rule 26    type_specifier -> CHAR_STAR
Rule 27    argument_list -> arguments
Rule 28    argument_list -> <empty>
Rule 29    arguments -> arguments COMMA arg
Rule 30    arguments -> arg
Rule 31    arg -> type identifier
Rule 32    stmt -> compound_stmt
Rule 33    stmt -> single_stmt
Rule 34    compound_stmt -> BLP seen_BLP statements BRP
Rule 35    seen_BLP -> <empty>
Rule 36    statements -> statements M stmt
Rule 37    statements -> <empty>
Rule 38    single_stmt -> if_block seen_control
Rule 39    single_stmt -> for_block seen_control
Rule 40    single_stmt -> while_block seen_control
Rule 41    single_stmt -> declaration
Rule 42    single_stmt -> function_call SEMICOLON
Rule 43    single_stmt -> RETURN SEMICOLON
Rule 44    single_stmt -> prntf_call SEMICOLON
Rule 45    single_stmt -> RETURN sub_expr SEMICOLON
Rule 46    single_stmt -> CONTINUE SEMICOLON
Rule 47    single_stmt -> BREAK SEMICOLON
Rule 48    seen_control -> <empty>
Rule 49    expression_stmt -> expression SEMICOLON
Rule 50    expression_stmt -> SEMICOLON
Rule 51    for_block -> FOR LP expression_stmt M expression_stmt M expression RP before_loop N M stmt after_loop
Rule 52    before_loop -> <empty>
Rule 53    after_loop -> <empty>
Rule 54    if_block -> IF LP expression RP M stmt ELSE N M stmt
Rule 55    if_block -> IF LP expression RP M stmt
Rule 56    while_block -> WHILE M LP expression RP M before_loop stmt after_loop
Rule 57    declaration -> type declaration_list SEMICOLON
Rule 58    declaration -> declaration_list SEMICOLON
Rule 59    declaration -> unary_expr
Rule 60    declaration_list -> declaration_list COMMA sub_decl
Rule 61    declaration_list -> sub_decl
Rule 62    sub_decl -> assignment_expr
Rule 63    sub_decl -> identifier
Rule 64    sub_decl -> array_access
Rule 65    expression -> expression COMMA sub_expr
Rule 66    expression -> sub_expr
Rule 67    sub_expr -> sub_expr GR sub_expr
Rule 68    sub_expr -> sub_expr LS sub_expr
Rule 69    sub_expr -> sub_expr EQ sub_expr
Rule 70    sub_expr -> sub_expr NOT_EQ sub_expr
Rule 71    sub_expr -> sub_expr GR_EQ sub_expr
Rule 72    sub_expr -> sub_expr LS_EQ sub_expr
Rule 73    sub_expr -> sub_expr LOGICAL_AND M sub_expr
Rule 74    sub_expr -> sub_expr LOGICAL_OR M sub_expr
Rule 75    sub_expr -> NOT sub_expr
Rule 76    sub_expr -> arithmetic_expr seen_arith
Rule 77    sub_expr -> assignment_expr
Rule 78    sub_expr -> unary_expr
Rule 79    seen_arith -> <empty>
Rule 80    assignment_expr -> lhs assign arithmetic_expr seen_arch
Rule 81    assignment_expr -> lhs assign array_access seen_array
Rule 82    assignment_expr -> lhs assign function_call seen_func_call
Rule 83    assignment_expr -> lhs assign unary_expr seen_unary
Rule 84    seen_arch -> <empty>
Rule 85    seen_array -> <empty>
Rule 86    seen_func_call -> <empty>
Rule 87    seen_unary -> <empty>
Rule 88    unary_expr -> identifier INCREMENT
Rule 89    unary_expr -> identifier DECREMENT
Rule 90    unary_expr -> DECREMENT identifier
Rule 91    unary_expr -> INCREMENT identifier
Rule 92    lhs -> identifier seen_id
Rule 93    lhs -> array_access
Rule 94    seen_id -> <empty>
Rule 95    identifier -> IDENTIFIER
Rule 96    assign -> ASSIGN
Rule 97    assign -> ADD_ASSIGN
Rule 98    assign -> SUB_ASSIGN
Rule 99    assign -> DIV_ASSIGN
Rule 100   assign -> MOD_ASSIGN
Rule 101   assign -> MUL_ASSIGN
Rule 102   arithmetic_expr -> arithmetic_expr ADD arithmetic_expr
Rule 103   arithmetic_expr -> arithmetic_expr SUB arithmetic_expr
Rule 104   arithmetic_expr -> arithmetic_expr MUL arithmetic_expr
Rule 105   arithmetic_expr -> arithmetic_expr DIV arithmetic_expr
Rule 106   arithmetic_expr -> arithmetic_expr MOD arithmetic_expr
Rule 107   arithmetic_expr -> LP arithmetic_expr RP
Rule 108   arithmetic_expr -> SUB arithmetic_expr
Rule 109   arithmetic_expr -> identifier
Rule 110   arithmetic_expr -> constant
Rule 111   constant -> DEC_CONSTANT
Rule 112   constant -> HEX_CONSTANT
Rule 113   constant -> CHAR_CONSTANT
Rule 114   constant -> FLOAT_CONSTANT
Rule 115   array_access -> identifier MLP array_index MRP
Rule 116   array_index -> constant
Rule 117   array_index -> identifier
Rule 118   function_call -> identifier LP parameter_list RP
Rule 119   function_call -> identifier LP RP
Rule 120   prntf_call -> PRNTF LP STRING RP
Rule 121   prntf_call -> PRNTF LP STRING COMMA parameter_list RP
Rule 122   parameter_list -> parameter_list COMMA parameter
Rule 123   parameter_list -> parameter
Rule 124   parameter -> sub_expr
Rule 125   parameter -> STRING
Rule 126   M -> <empty>
Rule 127   N -> <empty>

Terminals, with rules where they appear

ADD                  : 102
ADD_ASSIGN           : 97
ASSIGN               : 96
BLP                  : 34
BREAK                : 47
BRP                  : 34
CHAR                 : 23
CHAR_CONSTANT        : 113
CHAR_STAR            : 26
COMMA                : 29 60 65 121 122
CONST                : 
CONTINUE             : 46
DECREMENT            : 89 90
DEC_CONSTANT         : 111
DIV                  : 105
DIV_ASSIGN           : 99
ELSE                 : 54
EQ                   : 69
FLOAT                : 24
FLOAT_CONSTANT       : 114
FOR                  : 51
GR                   : 67
GR_EQ                : 71
HEX_CONSTANT         : 112
IDENTIFIER           : 95
IF                   : 54 55
INCREMENT            : 88 91
INT                  : 16 17 21 22
LOGICAL_AND          : 73
LOGICAL_OR           : 74
LONG                 : 19 21
LONG_LONG            : 20 22
LOWER_THAN_ELSE      : 
LP                   : 5 51 54 55 56 107 118 119 120 121
LS                   : 68
LS_EQ                : 72
MLP                  : 115
MOD                  : 106
MOD_ASSIGN           : 100
MRP                  : 115
MUL                  : 12 13 104
MUL_ASSIGN           : 101
NOT                  : 75
NOT_EQ               : 70
PRNTF                : 120 121
RETURN               : 43 45
RP                   : 5 51 54 55 56 107 118 119 120 121
SEMICOLON            : 42 43 44 45 46 47 49 50 57 58
SHORT                : 17 18
SIGNED               : 14
STRING               : 120 121 125
SUB                  : 103 108
SUB_ASSIGN           : 98
UNSIGNED             : 15
VOID                 : 25
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

M                    : 36 51 51 51 54 54 55 56 56 73 74
N                    : 51 54
after_loop           : 51 56
arg                  : 29 30
argument_list        : 5
arguments            : 27 29
arithmetic_expr      : 76 80 102 102 103 103 104 104 105 105 106 106 107 108
array_access         : 64 81 93
array_index          : 115
assign               : 80 81 82 83
assignment_expr      : 62 77
before_loop          : 51 56
builder              : 1 2
compound_stmt        : 5 32
constant             : 110 116
data_type            : 8 9
declaration          : 4 41
declaration_list     : 57 58 60
expression           : 49 51 54 55 56 65
expression_stmt      : 51 51
for_block            : 39
function             : 3
function_call        : 42 82
identifier           : 5 31 63 88 89 90 91 92 109 115 117 118 119
if_block             : 38
lhs                  : 80 81 82 83
parameter            : 122 123
parameter_list       : 118 121 122
pointer              : 8 12
prntf_call           : 44
seen_BLP             : 34
seen_arch            : 80
seen_argument_list   : 5
seen_arith           : 76
seen_array           : 81
seen_control         : 38 39 40
seen_func_call       : 82
seen_id              : 92
seen_identifier      : 5
seen_unary           : 83
sign_specifier       : 10
single_stmt          : 33
starter              : 1 0
statements           : 34 36
stmt                 : 36 51 54 54 55 56
sub_decl             : 60 61
sub_expr             : 45 65 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 124
type                 : 5 31 57
type_specifier       : 10 11
unary_expr           : 59 78 83
while_block          : 40

Parsing method: LALR

state 0

    (0) S' -> . starter
    (1) starter -> . starter builder
    (2) starter -> . builder
    (3) builder -> . function
    (4) builder -> . declaration
    (5) function -> . type identifier seen_identifier LP argument_list seen_argument_list RP compound_stmt
    (57) declaration -> . type declaration_list SEMICOLON
    (58) declaration -> . declaration_list SEMICOLON
    (59) declaration -> . unary_expr
    (8) type -> . data_type pointer
    (9) type -> . data_type
    (60) declaration_list -> . declaration_list COMMA sub_decl
    (61) declaration_list -> . sub_decl
    (88) unary_expr -> . identifier INCREMENT
    (89) unary_expr -> . identifier DECREMENT
    (90) unary_expr -> . DECREMENT identifier
    (91) unary_expr -> . INCREMENT identifier
    (10) data_type -> . sign_specifier type_specifier
    (11) data_type -> . type_specifier
    (62) sub_decl -> . assignment_expr
    (63) sub_decl -> . identifier
    (64) sub_decl -> . array_access
    (95) identifier -> . IDENTIFIER
    (14) sign_specifier -> . SIGNED
    (15) sign_specifier -> . UNSIGNED
    (16) type_specifier -> . INT
    (17) type_specifier -> . SHORT INT
    (18) type_specifier -> . SHORT
    (19) type_specifier -> . LONG
    (20) type_specifier -> . LONG_LONG
    (21) type_specifier -> . LONG INT
    (22) type_specifier -> . LONG_LONG INT
    (23) type_specifier -> . CHAR
    (24) type_specifier -> . FLOAT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR_STAR
    (80) assignment_expr -> . lhs assign arithmetic_expr seen_arch
    (81) assignment_expr -> . lhs assign array_access seen_array
    (82) assignment_expr -> . lhs assign function_call seen_func_call
    (83) assignment_expr -> . lhs assign unary_expr seen_unary
    (115) array_access -> . identifier MLP array_index MRP
    (92) lhs -> . identifier seen_id
    (93) lhs -> . array_access

    DECREMENT       shift and go to state 12
    INCREMENT       shift and go to state 11
    IDENTIFIER      shift and go to state 17
    SIGNED          shift and go to state 18
    UNSIGNED        shift and go to state 19
    INT             shift and go to state 20
    SHORT           shift and go to state 21
    LONG            shift and go to state 22
    LONG_LONG       shift and go to state 23
    CHAR            shift and go to state 24
    FLOAT           shift and go to state 25
    VOID            shift and go to state 26
    CHAR_STAR       shift and go to state 27

    starter                        shift and go to state 1
    builder                        shift and go to state 2
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5
    identifier                     shift and go to state 6
    declaration_list               shift and go to state 7
    unary_expr                     shift and go to state 8
    data_type                      shift and go to state 9
    sub_decl                       shift and go to state 10
    sign_specifier                 shift and go to state 13
    type_specifier                 shift and go to state 14
    assignment_expr                shift and go to state 15
    array_access                   shift and go to state 16
    lhs                            shift and go to state 28

state 1

    (0) S' -> starter .
    (1) starter -> starter . builder
    (3) builder -> . function
    (4) builder -> . declaration
    (5) function -> . type identifier seen_identifier LP argument_list seen_argument_list RP compound_stmt
    (57) declaration -> . type declaration_list SEMICOLON
    (58) declaration -> . declaration_list SEMICOLON
    (59) declaration -> . unary_expr
    (8) type -> . data_type pointer
    (9) type -> . data_type
    (60) declaration_list -> . declaration_list COMMA sub_decl
    (61) declaration_list -> . sub_decl
    (88) unary_expr -> . identifier INCREMENT
    (89) unary_expr -> . identifier DECREMENT
    (90) unary_expr -> . DECREMENT identifier
    (91) unary_expr -> . INCREMENT identifier
    (10) data_type -> . sign_specifier type_specifier
    (11) data_type -> . type_specifier
    (62) sub_decl -> . assignment_expr
    (63) sub_decl -> . identifier
    (64) sub_decl -> . array_access
    (95) identifier -> . IDENTIFIER
    (14) sign_specifier -> . SIGNED
    (15) sign_specifier -> . UNSIGNED
    (16) type_specifier -> . INT
    (17) type_specifier -> . SHORT INT
    (18) type_specifier -> . SHORT
    (19) type_specifier -> . LONG
    (20) type_specifier -> . LONG_LONG
    (21) type_specifier -> . LONG INT
    (22) type_specifier -> . LONG_LONG INT
    (23) type_specifier -> . CHAR
    (24) type_specifier -> . FLOAT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR_STAR
    (80) assignment_expr -> . lhs assign arithmetic_expr seen_arch
    (81) assignment_expr -> . lhs assign array_access seen_array
    (82) assignment_expr -> . lhs assign function_call seen_func_call
    (83) assignment_expr -> . lhs assign unary_expr seen_unary
    (115) array_access -> . identifier MLP array_index MRP
    (92) lhs -> . identifier seen_id
    (93) lhs -> . array_access

    DECREMENT       shift and go to state 12
    INCREMENT       shift and go to state 11
    IDENTIFIER      shift and go to state 17
    SIGNED          shift and go to state 18
    UNSIGNED        shift and go to state 19
    INT             shift and go to state 20
    SHORT           shift and go to state 21
    LONG            shift and go to state 22
    LONG_LONG       shift and go to state 23
    CHAR            shift and go to state 24
    FLOAT           shift and go to state 25
    VOID            shift and go to state 26
    CHAR_STAR       shift and go to state 27

    builder                        shift and go to state 29
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5
    identifier                     shift and go to state 6
    declaration_list               shift and go to state 7
    unary_expr                     shift and go to state 8
    data_type                      shift and go to state 9
    sub_decl                       shift and go to state 10
    sign_specifier                 shift and go to state 13
    type_specifier                 shift and go to state 14
    assignment_expr                shift and go to state 15
    array_access                   shift and go to state 16
    lhs                            shift and go to state 28

state 2

    (2) starter -> builder .

    DECREMENT       reduce using rule 2 (starter -> builder .)
    INCREMENT       reduce using rule 2 (starter -> builder .)
    IDENTIFIER      reduce using rule 2 (starter -> builder .)
    SIGNED          reduce using rule 2 (starter -> builder .)
    UNSIGNED        reduce using rule 2 (starter -> builder .)
    INT             reduce using rule 2 (starter -> builder .)
    SHORT           reduce using rule 2 (starter -> builder .)
    LONG            reduce using rule 2 (starter -> builder .)
    LONG_LONG       reduce using rule 2 (starter -> builder .)
    CHAR            reduce using rule 2 (starter -> builder .)
    FLOAT           reduce using rule 2 (starter -> builder .)
    VOID            reduce using rule 2 (starter -> builder .)
    CHAR_STAR       reduce using rule 2 (starter -> builder .)
    $end            reduce using rule 2 (starter -> builder .)


state 3

    (3) builder -> function .

    DECREMENT       reduce using rule 3 (builder -> function .)
    INCREMENT       reduce using rule 3 (builder -> function .)
    IDENTIFIER      reduce using rule 3 (builder -> function .)
    SIGNED          reduce using rule 3 (builder -> function .)
    UNSIGNED        reduce using rule 3 (builder -> function .)
    INT             reduce using rule 3 (builder -> function .)
    SHORT           reduce using rule 3 (builder -> function .)
    LONG            reduce using rule 3 (builder -> function .)
    LONG_LONG       reduce using rule 3 (builder -> function .)
    CHAR            reduce using rule 3 (builder -> function .)
    FLOAT           reduce using rule 3 (builder -> function .)
    VOID            reduce using rule 3 (builder -> function .)
    CHAR_STAR       reduce using rule 3 (builder -> function .)
    $end            reduce using rule 3 (builder -> function .)


state 4

    (4) builder -> declaration .

    DECREMENT       reduce using rule 4 (builder -> declaration .)
    INCREMENT       reduce using rule 4 (builder -> declaration .)
    IDENTIFIER      reduce using rule 4 (builder -> declaration .)
    SIGNED          reduce using rule 4 (builder -> declaration .)
    UNSIGNED        reduce using rule 4 (builder -> declaration .)
    INT             reduce using rule 4 (builder -> declaration .)
    SHORT           reduce using rule 4 (builder -> declaration .)
    LONG            reduce using rule 4 (builder -> declaration .)
    LONG_LONG       reduce using rule 4 (builder -> declaration .)
    CHAR            reduce using rule 4 (builder -> declaration .)
    FLOAT           reduce using rule 4 (builder -> declaration .)
    VOID            reduce using rule 4 (builder -> declaration .)
    CHAR_STAR       reduce using rule 4 (builder -> declaration .)
    $end            reduce using rule 4 (builder -> declaration .)


state 5

    (5) function -> type . identifier seen_identifier LP argument_list seen_argument_list RP compound_stmt
    (57) declaration -> type . declaration_list SEMICOLON
    (95) identifier -> . IDENTIFIER
    (60) declaration_list -> . declaration_list COMMA sub_decl
    (61) declaration_list -> . sub_decl
    (62) sub_decl -> . assignment_expr
    (63) sub_decl -> . identifier
    (64) sub_decl -> . array_access
    (80) assignment_expr -> . lhs assign arithmetic_expr seen_arch
    (81) assignment_expr -> . lhs assign array_access seen_array
    (82) assignment_expr -> . lhs assign function_call seen_func_call
    (83) assignment_expr -> . lhs assign unary_expr seen_unary
    (115) array_access -> . identifier MLP array_index MRP
    (92) lhs -> . identifier seen_id
    (93) lhs -> . array_access

    IDENTIFIER      shift and go to state 17

    identifier                     shift and go to state 30
    declaration_list               shift and go to state 31
    sub_decl                       shift and go to state 10
    assignment_expr                shift and go to state 15
    array_access                   shift and go to state 16
    lhs                            shift and go to state 28

state 6

    (88) unary_expr -> identifier . INCREMENT
    (89) unary_expr -> identifier . DECREMENT
    (63) sub_decl -> identifier .
    (115) array_access -> identifier . MLP array_index MRP
    (92) lhs -> identifier . seen_id
    (94) seen_id -> .

    INCREMENT       shift and go to state 32
    DECREMENT       shift and go to state 33
    SEMICOLON       reduce using rule 63 (sub_decl -> identifier .)
    COMMA           reduce using rule 63 (sub_decl -> identifier .)
    MLP             shift and go to state 34
    ASSIGN          reduce using rule 94 (seen_id -> .)
    ADD_ASSIGN      reduce using rule 94 (seen_id -> .)
    SUB_ASSIGN      reduce using rule 94 (seen_id -> .)
    DIV_ASSIGN      reduce using rule 94 (seen_id -> .)
    MOD_ASSIGN      reduce using rule 94 (seen_id -> .)
    MUL_ASSIGN      reduce using rule 94 (seen_id -> .)

    seen_id                        shift and go to state 35

state 7

    (58) declaration -> declaration_list . SEMICOLON
    (60) declaration_list -> declaration_list . COMMA sub_decl

    SEMICOLON       shift and go to state 36
    COMMA           shift and go to state 37


state 8

    (59) declaration -> unary_expr .

    DECREMENT       reduce using rule 59 (declaration -> unary_expr .)
    INCREMENT       reduce using rule 59 (declaration -> unary_expr .)
    IDENTIFIER      reduce using rule 59 (declaration -> unary_expr .)
    SIGNED          reduce using rule 59 (declaration -> unary_expr .)
    UNSIGNED        reduce using rule 59 (declaration -> unary_expr .)
    INT             reduce using rule 59 (declaration -> unary_expr .)
    SHORT           reduce using rule 59 (declaration -> unary_expr .)
    LONG            reduce using rule 59 (declaration -> unary_expr .)
    LONG_LONG       reduce using rule 59 (declaration -> unary_expr .)
    CHAR            reduce using rule 59 (declaration -> unary_expr .)
    FLOAT           reduce using rule 59 (declaration -> unary_expr .)
    VOID            reduce using rule 59 (declaration -> unary_expr .)
    CHAR_STAR       reduce using rule 59 (declaration -> unary_expr .)
    $end            reduce using rule 59 (declaration -> unary_expr .)
    BRP             reduce using rule 59 (declaration -> unary_expr .)
    BLP             reduce using rule 59 (declaration -> unary_expr .)
    RETURN          reduce using rule 59 (declaration -> unary_expr .)
    CONTINUE        reduce using rule 59 (declaration -> unary_expr .)
    BREAK           reduce using rule 59 (declaration -> unary_expr .)
    IF              reduce using rule 59 (declaration -> unary_expr .)
    FOR             reduce using rule 59 (declaration -> unary_expr .)
    WHILE           reduce using rule 59 (declaration -> unary_expr .)
    PRNTF           reduce using rule 59 (declaration -> unary_expr .)
    ELSE            reduce using rule 59 (declaration -> unary_expr .)


state 9

    (8) type -> data_type . pointer
    (9) type -> data_type .
    (12) pointer -> . MUL pointer
    (13) pointer -> . MUL

    IDENTIFIER      reduce using rule 9 (type -> data_type .)
    MUL             shift and go to state 39

    pointer                        shift and go to state 38

state 10

    (61) declaration_list -> sub_decl .

    SEMICOLON       reduce using rule 61 (declaration_list -> sub_decl .)
    COMMA           reduce using rule 61 (declaration_list -> sub_decl .)


state 11

    (91) unary_expr -> INCREMENT . identifier
    (95) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 17

    identifier                     shift and go to state 40

state 12

    (90) unary_expr -> DECREMENT . identifier
    (95) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 17

    identifier                     shift and go to state 41

state 13

    (10) data_type -> sign_specifier . type_specifier
    (16) type_specifier -> . INT
    (17) type_specifier -> . SHORT INT
    (18) type_specifier -> . SHORT
    (19) type_specifier -> . LONG
    (20) type_specifier -> . LONG_LONG
    (21) type_specifier -> . LONG INT
    (22) type_specifier -> . LONG_LONG INT
    (23) type_specifier -> . CHAR
    (24) type_specifier -> . FLOAT
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR_STAR

    INT             shift and go to state 20
    SHORT           shift and go to state 21
    LONG            shift and go to state 22
    LONG_LONG       shift and go to state 23
    CHAR            shift and go to state 24
    FLOAT           shift and go to state 25
    VOID            shift and go to state 26
    CHAR_STAR       shift and go to state 27

    type_specifier                 shift and go to state 42

state 14

    (11) data_type -> type_specifier .

    MUL             reduce using rule 11 (data_type -> type_specifier .)
    IDENTIFIER      reduce using rule 11 (data_type -> type_specifier .)


state 15

    (62) sub_decl -> assignment_expr .

    SEMICOLON       reduce using rule 62 (sub_decl -> assignment_expr .)
    COMMA           reduce using rule 62 (sub_decl -> assignment_expr .)


state 16

    (64) sub_decl -> array_access .
    (93) lhs -> array_access .

    SEMICOLON       reduce using rule 64 (sub_decl -> array_access .)
    COMMA           reduce using rule 64 (sub_decl -> array_access .)
    ASSIGN          reduce using rule 93 (lhs -> array_access .)
    ADD_ASSIGN      reduce using rule 93 (lhs -> array_access .)
    SUB_ASSIGN      reduce using rule 93 (lhs -> array_access .)
    DIV_ASSIGN      reduce using rule 93 (lhs -> array_access .)
    MOD_ASSIGN      reduce using rule 93 (lhs -> array_access .)
    MUL_ASSIGN      reduce using rule 93 (lhs -> array_access .)


state 17

    (95) identifier -> IDENTIFIER .

    INCREMENT       reduce using rule 95 (identifier -> IDENTIFIER .)
    DECREMENT       reduce using rule 95 (identifier -> IDENTIFIER .)
    MLP             reduce using rule 95 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 95 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 95 (identifier -> IDENTIFIER .)
    ASSIGN          reduce using rule 95 (identifier -> IDENTIFIER .)
    ADD_ASSIGN      reduce using rule 95 (identifier -> IDENTIFIER .)
    SUB_ASSIGN      reduce using rule 95 (identifier -> IDENTIFIER .)
    DIV_ASSIGN      reduce using rule 95 (identifier -> IDENTIFIER .)
    MOD_ASSIGN      reduce using rule 95 (identifier -> IDENTIFIER .)
    MUL_ASSIGN      reduce using rule 95 (identifier -> IDENTIFIER .)
    LP              reduce using rule 95 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 95 (identifier -> IDENTIFIER .)
    SIGNED          reduce using rule 95 (identifier -> IDENTIFIER .)
    UNSIGNED        reduce using rule 95 (identifier -> IDENTIFIER .)
    INT             reduce using rule 95 (identifier -> IDENTIFIER .)
    SHORT           reduce using rule 95 (identifier -> IDENTIFIER .)
    LONG            reduce using rule 95 (identifier -> IDENTIFIER .)
    LONG_LONG       reduce using rule 95 (identifier -> IDENTIFIER .)
    CHAR            reduce using rule 95 (identifier -> IDENTIFIER .)
    FLOAT           reduce using rule 95 (identifier -> IDENTIFIER .)
    VOID            reduce using rule 95 (identifier -> IDENTIFIER .)
    CHAR_STAR       reduce using rule 95 (identifier -> IDENTIFIER .)
    $end            reduce using rule 95 (identifier -> IDENTIFIER .)
    GR              reduce using rule 95 (identifier -> IDENTIFIER .)
    LS              reduce using rule 95 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 95 (identifier -> IDENTIFIER .)
    NOT_EQ          reduce using rule 95 (identifier -> IDENTIFIER .)
    GR_EQ           reduce using rule 95 (identifier -> IDENTIFIER .)
    LS_EQ           reduce using rule 95 (identifier -> IDENTIFIER .)
    LOGICAL_AND     reduce using rule 95 (identifier -> IDENTIFIER .)
    LOGICAL_OR      reduce using rule 95 (identifier -> IDENTIFIER .)
    RP              reduce using rule 95 (identifier -> IDENTIFIER .)
    BRP             reduce using rule 95 (identifier -> IDENTIFIER .)
    BLP             reduce using rule 95 (identifier -> IDENTIFIER .)
    RETURN          reduce using rule 95 (identifier -> IDENTIFIER .)
    CONTINUE        reduce using rule 95 (identifier -> IDENTIFIER .)
    BREAK           reduce using rule 95 (identifier -> IDENTIFIER .)
    IF              reduce using rule 95 (identifier -> IDENTIFIER .)
    FOR             reduce using rule 95 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 95 (identifier -> IDENTIFIER .)
    PRNTF           reduce using rule 95 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 95 (identifier -> IDENTIFIER .)
    MRP             reduce using rule 95 (identifier -> IDENTIFIER .)
    ADD             reduce using rule 95 (identifier -> IDENTIFIER .)
    SUB             reduce using rule 95 (identifier -> IDENTIFIER .)
    MUL             reduce using rule 95 (identifier -> IDENTIFIER .)
    DIV             reduce using rule 95 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 95 (identifier -> IDENTIFIER .)


state 18

    (14) sign_specifier -> SIGNED .

    INT             reduce using rule 14 (sign_specifier -> SIGNED .)
    SHORT           reduce using rule 14 (sign_specifier -> SIGNED .)
    LONG            reduce using rule 14 (sign_specifier -> SIGNED .)
    LONG_LONG       reduce using rule 14 (sign_specifier -> SIGNED .)
    CHAR            reduce using rule 14 (sign_specifier -> SIGNED .)
    FLOAT           reduce using rule 14 (sign_specifier -> SIGNED .)
    VOID            reduce using rule 14 (sign_specifier -> SIGNED .)
    CHAR_STAR       reduce using rule 14 (sign_specifier -> SIGNED .)


state 19

    (15) sign_specifier -> UNSIGNED .

    INT             reduce using rule 15 (sign_specifier -> UNSIGNED .)
    SHORT           reduce using rule 15 (sign_specifier -> UNSIGNED .)
    LONG            reduce using rule 15 (sign_specifier -> UNSIGNED .)
    LONG_LONG       reduce using rule 15 (sign_specifier -> UNSIGNED .)
    CHAR            reduce using rule 15 (sign_specifier -> UNSIGNED .)
    FLOAT           reduce using rule 15 (sign_specifier -> UNSIGNED .)
    VOID            reduce using rule 15 (sign_specifier -> UNSIGNED .)
    CHAR_STAR       reduce using rule 15 (sign_specifier -> UNSIGNED .)


state 20

    (16) type_specifier -> INT .

    MUL             reduce using rule 16 (type_specifier -> INT .)
    IDENTIFIER      reduce using rule 16 (type_specifier -> INT .)


state 21

    (17) type_specifier -> SHORT . INT
    (18) type_specifier -> SHORT .

    INT             shift and go to state 43
    MUL             reduce using rule 18 (type_specifier -> SHORT .)
    IDENTIFIER      reduce using rule 18 (type_specifier -> SHORT .)


state 22

    (19) type_specifier -> LONG .
    (21) type_specifier -> LONG . INT

    MUL             reduce using rule 19 (type_specifier -> LONG .)
    IDENTIFIER      reduce using rule 19 (type_specifier -> LONG .)
    INT             shift and go to state 44


state 23

    (20) type_specifier -> LONG_LONG .
    (22) type_specifier -> LONG_LONG . INT

    MUL             reduce using rule 20 (type_specifier -> LONG_LONG .)
    IDENTIFIER      reduce using rule 20 (type_specifier -> LONG_LONG .)
    INT             shift and go to state 45


state 24

    (23) type_specifier -> CHAR .

    MUL             reduce using rule 23 (type_specifier -> CHAR .)
    IDENTIFIER      reduce using rule 23 (type_specifier -> CHAR .)


state 25

    (24) type_specifier -> FLOAT .

    MUL             reduce using rule 24 (type_specifier -> FLOAT .)
    IDENTIFIER      reduce using rule 24 (type_specifier -> FLOAT .)


state 26

    (25) type_specifier -> VOID .

    MUL             reduce using rule 25 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 25 (type_specifier -> VOID .)


state 27

    (26) type_specifier -> CHAR_STAR .

    MUL             reduce using rule 26 (type_specifier -> CHAR_STAR .)
    IDENTIFIER      reduce using rule 26 (type_specifier -> CHAR_STAR .)


state 28

    (80) assignment_expr -> lhs . assign arithmetic_expr seen_arch
    (81) assignment_expr -> lhs . assign array_access seen_array
    (82) assignment_expr -> lhs . assign function_call seen_func_call
    (83) assignment_expr -> lhs . assign unary_expr seen_unary
    (96) assign -> . ASSIGN
    (97) assign -> . ADD_ASSIGN
    (98) assign -> . SUB_ASSIGN
    (99) assign -> . DIV_ASSIGN
    (100) assign -> . MOD_ASSIGN
    (101) assign -> . MUL_ASSIGN

    ASSIGN          shift and go to state 47
    ADD_ASSIGN      shift and go to state 48
    SUB_ASSIGN      shift and go to state 49
    DIV_ASSIGN      shift and go to state 50
    MOD_ASSIGN      shift and go to state 51
    MUL_ASSIGN      shift and go to state 52

    assign                         shift and go to state 46

state 29

    (1) starter -> starter builder .

    DECREMENT       reduce using rule 1 (starter -> starter builder .)
    INCREMENT       reduce using rule 1 (starter -> starter builder .)
    IDENTIFIER      reduce using rule 1 (starter -> starter builder .)
    SIGNED          reduce using rule 1 (starter -> starter builder .)
    UNSIGNED        reduce using rule 1 (starter -> starter builder .)
    INT             reduce using rule 1 (starter -> starter builder .)
    SHORT           reduce using rule 1 (starter -> starter builder .)
    LONG            reduce using rule 1 (starter -> starter builder .)
    LONG_LONG       reduce using rule 1 (starter -> starter builder .)
    CHAR            reduce using rule 1 (starter -> starter builder .)
    FLOAT           reduce using rule 1 (starter -> starter builder .)
    VOID            reduce using rule 1 (starter -> starter builder .)
    CHAR_STAR       reduce using rule 1 (starter -> starter builder .)
    $end            reduce using rule 1 (starter -> starter builder .)


state 30
